--- a/java/keyple-gradle/gradle.properties
+++ b/java/keyple-gradle/gradle.properties
@@ -6,4 +6,4 @@ ossrhPassword=
 group=org.eclipse.keyple
 name=Keyple Gradle Plugin
 description=Keyple Gradle Plugin
-version=0.1.0
+version=0.2.0-SNAPSHOT
