Keyple Gradle Plugin: fix name/title

--- a/java/keyple-gradle/gradle.properties
+++ b/java/keyple-gradle/gradle.properties
@@ -4,6 +4,6 @@ ossrhUsername=
 ossrhPassword=
 
 group=org.eclipse.keyple
-name=Keyple Gradle Plugin
+title=Keyple Gradle Plugin
 description=Keyple Gradle Plugin
 version=0.2.0-SNAPSHOT
